--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hayroo | A ecommerce website" />
-    <title>Hayroo</title>
+    <meta name="description" content="Revivo | A ecommerce website" />
+<Question ID="1" Shortcut="chapter 1" Order="" ElementType="chapter" >
+<LongCaption><title>Revivo</title></LongCaption>
+</Question>
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css">
 </head>
 
